# sisifo

./: .gitignore  .ignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
orchestration/: Dockerfile  __init__.py  constants.py  queue_helpers.py  queue_store.py  runtime_docker.py  runtime_opencode.py  runtime_review.py  task_files.py  taskq.py  worker.py
orchestration/adapters/: __init__.py  docker.py  git.py  opencode.py  protocol.py  review.py
orchestration/cli/: __init__.py  cmd_add.py  cmd_build_image.py  cmd_cleanup.py  cmd_remove.py  cmd_review.py  cmd_run.py  cmd_status.py  cmd_transitions.py
orchestration/core/: __init__.py  exceptions.py  models.py  naming.py
orchestration/pipeline/: __init__.py  error_reporting.py  processor.py  stages.py
orchestration/store/: __init__.py  error_store.py  repository.py
orchestration/support/: __init__.py  env.py  paths.py  task_files.py
orchestration/tests/: conftest.py  create_manual_test_md.py  e2e_validation.py  smoke_tests.py  test_queue_store.py  test_runtime_docker.py  test_runtime_git.py  test_runtime_opencode.py  test_runtime_review.py  test_task_files.py  test_taskq.py  test_worker.py
orchestration/tests/adapters/: test_adapter_protocol.py  test_runtime_docker.py  test_runtime_git.py  test_runtime_opencode.py  test_runtime_review.py
orchestration/tests/cli/: test_build_image.py  test_taskq.py  test_transitions.py
orchestration/tests/pipeline/: test_worker.py
orchestration/tests/store/: test_queue_store.py
orchestration/tests/support/: test_task_files.py
queue/tasks/: example-task.md
