[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sisifo-taskq"
version = "0.1.0"
description = "Local task queue orchestration CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
taskq = "orchestration.taskq:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]
